mount local pv on windows and run statefulset

--- a/history/03_local_pv_mongo_2_statefulset/pvc.yaml
+++ b/history/03_local_pv_mongo_2_statefulset/pvc.yaml
@@ -9,7 +9,7 @@ spec:
   capacity:
     storage: 50Gi
   local:
-    path: /mnt/sdf
+    path: /run/desktop/mnt/host/c/mnt/sdf
   claimRef:
     namespace: default
     name: pv-data-1-pvc
