--- a/history/03_local_pv_mongo_2_statefulset/statefulset.yaml
+++ b/history/03_local_pv_mongo_2_statefulset/statefulset.yaml
@@ -7,10 +7,10 @@ metadata:
   name: mongo
 spec:
   replicas: 1
+  serviceName: mongo
   selector:
     matchLabels:
       app: mongo
-  strategy: {}
   template:
     metadata:
       creationTimestamp: null
