--- a/history/03_local_pv_mongo_2_statefulset/service.yaml
+++ b/history/03_local_pv_mongo_2_statefulset/service.yaml
@@ -2,16 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: mongo
+    name: mongo
   name: mongo-nodeport-svc
 spec:
   ports:
   - port: 27017
-    protocol: TCP
     targetPort: 27017
-    nodePort: 32000
+  clusterIP: None
   selector:
-    app: mongodb-shard1-repl1
-  type: NodePort
-status:
-  loadBalancer: {}
+    name: mongodb-shard1-repl1
